test/szls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: szls
  template:
    metadata:
      labels:
        app: szls
    spec:
      nodeName: work-09
      containers:

        - name: szls
          image: 192.168.0.112:5008/jcyweb/vue-demo:v1.9.5
          command: ["nginx", "-g", "daemon off;"]
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          startupProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 30
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: szls
spec:
  selector:
    app: szls
  type: clusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
